# fleet-adapter

./: CHANGELOG.md  CancelStartedTask.md  CustomMission.md  README.md
config/: config_rbkairos.yaml  config_rbvogui.yaml
container/: .env  compose.yaml  docker-compose.yaml
container/builder/: Dockerfile  cd.yaml  ci.yaml  compose.env  compose.yaml  docker-compose.yaml
container/builder/requirements/: fleet-adapter.txt  python.txt
container/compose/: builder-common.yaml  run.yaml
container/environment/compose/: project-docker-hub.env  project-robotnik.env  version.env
container/environment/fleet_adapter/: adapter_config_files.env
data/config/: config.yaml  config_robotnik_fleet.yaml
data/graph/: 0.yaml
docker/: Dockerfile  build.yaml  ci.yaml  docker-compose.yaml  ros_entrypoint.sh  run-docker.sh
docker/requirements/: fleet-adapter.txt  python.txt
door_adapter/: package.xml  setup.py
door_adapter/door_adapter/: DoorClientAPI.py  door_adapter.py
fleet_adapter_mqtt/: package.xml  setup.py
fleet_adapter_mqtt/fleet_adapter_mqtt/: RobotClientAPI.py  RobotCommandHandle.py  RobotDelivery.py  dispatch_action.py  fleet_adapter.py  package.xml  setup.cfg  setup.py
fleet_adapter_template/: RobotClientAPI.py  RobotClientAPI_ros2.py  RobotCommandHandle.py
graph/: 0.yaml
robotnik_rmf_fleet_adapter_mqtt/: package.xml  setup.cfg  setup.py
robotnik_rmf_fleet_adapter_mqtt/robotnik_rmf_fleet_adapter_mqtt/: RobotClientAPI.py  RobotCommandHandle.py  RobotDelivery.py  cancel_task.py  dispatch_action.py  dispatch_patrol.py  fleet_adapter.py
(+7 files in other folders)
